k8s-AKS/nginx-ingress/financial-services-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: financial-services-ingress
  annotations:
    # kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    # # nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /account(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: account-service-deployment
            port:
              number: 8082
      - path: /aunthentication(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: authentication-service-deployment
            port:
              number: 8081
      - path: /backend(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: backend-service-deployment
            port:
              number: 8080
      - path: /forex(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: forex-service-deployment
            port:
              number: 8083
      - path: /transaction(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: transaction-service-deployment
            port:
              number: 8084
